Добавлен табличный блок Анкетные данные

--- a/index.html
+++ b/index.html
@@ -28,3 +28,26 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
+<h4>Анкетные данные</h4>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">ФИО</th>
+      <th scope="col">Клавдия Ивановна Иванова</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Дата рождения</td>
+      <td>7 января 1989 г.р.</td>
+    </tr>
+    <tr>
+      <td>Страна,город проживания</td>
+      <td>Владивосток</td>
+    </tr>
+    <tr>
+      <td>Контактная информация</td>
+      <td>klavai@gmail.com</td>
+    </tr>
+  </tbody>
+</table>
