Добавлена картинка  Alma

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </body>
 </html>
 <h4>Анкетные данные</h4>
+<p><img src="top_background.jpg" width="270.250" height="300" alt="Alma"></p>
 <table class="table table-striped">
   <thead>
     <tr>
