Добавила блоки Образование,Навыки,Доп.инфа

--- a/index.html
+++ b/index.html
@@ -52,3 +52,47 @@
     </tr>
   </tbody>
 </table>
+</tr>
+<h4>Цель резюме</h4>
+</tr>
+</table>
+<th scope="col">Соискатель на должность тестировщика программного обеспечения</th>
+</tr>
+</table>
+<h4>Образование</h4>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Основное образование</th>
+      <th scope="col">Дополнительное образование</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>МПГУ, учитель биологии</td>
+      <td>Курсы иностранных языков</td>
+    </tr>
+  </tbody>
+</table>
+</tr>
+<h4>Опыт работы</h4>
+</tr>
+</table>
+</tr>
+<th scope="col">ГБОУ №26, учитель биологии</th>
+</tr>
+</table>
+</tr>
+<h4>Профессиональные навыки и знания</h4>
+</tr>
+</table>
+<th scope="col">Уверенный пользователь ПК</th>
+</tr>
+</table>
+</tr>
+<h4>Дополнительная информация</h4>
+</tr>
+</table>
+<th scope="col">Есть права категории B</th>
+</tr>
+</table>
